--- a/PROJECT_ICT_APP/Dancing Buddy/MainPage.xaml
+++ b/PROJECT_ICT_APP/Dancing Buddy/MainPage.xaml
@@ -27,17 +27,21 @@
         </StackPanel>
 
         <!--ContentPanel - place additional content here-->
-        <Grid x:Name="ContentPanel" Grid.Row="1" Margin="10,0,14,0" RenderTransformOrigin="0.501,0.51">
+        <Grid x:Name="ContentPanel" Grid.Row="1" Margin="0,0,24,0" RenderTransformOrigin="0.501,0.51">
             <Grid.RowDefinitions>
                 <RowDefinition Height="5*"></RowDefinition>
                 <RowDefinition Height="*"></RowDefinition>
             </Grid.RowDefinitions>
+           
+            <Line Grid.Row="1" StrokeThickness="2" Stroke="Gray" HorizontalAlignment="Stretch" VerticalAlignment="Top" Stretch="Fill" X1="0" Y1="0" X2="1" Y2="0"></Line>
+
             <Grid Grid.Row="1">
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="*"></ColumnDefinition>
                     <ColumnDefinition Width="*"></ColumnDefinition>
                     <ColumnDefinition Width="*"></ColumnDefinition>
                 </Grid.ColumnDefinitions>
+
                     <Button Background="Green" Foreground="White" x:Name="btnPlay" Content="Play" Grid.Column="0" Click="btnPlay_Click" Visibility="Visible" />
                     <Button Background="Orange" Foreground="White" x:Name="btnPauze" Content="Pauze" Grid.Column="0" Click="btnPauze_Click" Visibility="Collapsed" />
                     <Button Background="Red" Foreground="White" x:Name="btnStop" Content="Stop" Grid.Column="2" Click="btnStop_Click" IsEnabled="False"></Button>
