--- a/PROJECT_ICT_APP/Dancing Buddy/MainPage.xaml
+++ b/PROJECT_ICT_APP/Dancing Buddy/MainPage.xaml
@@ -1,16 +1,16 @@
-﻿<phone:PhoneApplicationPage 
-    x:Class="Dancing_Buddy.MainPage"
+﻿<phone:PhoneApplicationPage
+    x:Class="Dancing_Buddy.Page1"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:phone="clr-namespace:Microsoft.Phone.Controls;assembly=Microsoft.Phone"
     xmlns:shell="clr-namespace:Microsoft.Phone.Shell;assembly=Microsoft.Phone"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    mc:Ignorable="d" d:DesignWidth="480" d:DesignHeight="768"
     FontFamily="{StaticResource PhoneFontFamilyNormal}"
     FontSize="{StaticResource PhoneFontSizeNormal}"
     Foreground="{StaticResource PhoneForegroundBrush}"
     SupportedOrientations="Portrait" Orientation="Portrait"
+    mc:Ignorable="d"
     shell:SystemTray.IsVisible="True">
 
     <!--LayoutRoot is the root grid where all page content is placed-->
@@ -19,47 +19,22 @@
             <RowDefinition Height="Auto"/>
             <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
-        
-        <Image Grid.Row="0" x:Name="imgHeadphone" Source="headphone.png" Visibility="Visible" Width="100" Height="100" HorizontalAlignment="Left" />
-        
+
         <!--TitlePanel contains the name of the application and page title-->
-        <StackPanel x:Name="TitlePanel" Grid.Row="0" Margin="12,17,0,28">
-            <TextBlock x:Name="TitlePage" Text="Dancing Buddy" Margin="9,-7,0,0" FontSize="50" FontFamily="Arial" Foreground="Red" HorizontalAlignment="Center">
-            </TextBlock>
+        <StackPanel Grid.Row="0" Margin="12,17,0,28">
+            <TextBlock Text="MY APPLICATION" Style="{StaticResource PhoneTextNormalStyle}"/>
+            <TextBlock Text="page name" Margin="9,-7,0,0" Style="{StaticResource PhoneTextTitle1Style}"/>
         </StackPanel>
 
         <!--ContentPanel - place additional content here-->
-        <Grid x:Name="ContentPanel"  Grid.Row="1" Margin="5,0,5,0" RenderTransformOrigin="0.501,0.51">
+        <Grid x:Name="ContentPanel" Grid.Row="1" Margin="12,0,12,0">
+            <StackPanel>
+                <TextBlock Text="bla bla bla" FontSize="30"/>
+                <Button x:Name="btnDancing" Content="Dancing Buddy" Background="Blue" Click="btnDancing_Click"/>
+                <Button x:Name="btnDBwarner" Content="dB Warner" Background="Magenta"/>
+            </StackPanel>
 
-            <Grid.RowDefinitions>
-                <RowDefinition Height="5*"></RowDefinition>
-                <RowDefinition Height="*"></RowDefinition>
-            </Grid.RowDefinitions>
-
-            <Button Height="100" Width="100" Click="Button_Click" Visibility="Visible">
-                <Button.Template>
-                    <ControlTemplate>
-                        <Image Source="play.png"/>
-                    </ControlTemplate>
-                </Button.Template>
-            </Button>
-
-            <Line Grid.Row="1" StrokeThickness="2" Stroke="Gray" HorizontalAlignment="Stretch" VerticalAlignment="Top" Stretch="Fill" X1="0" Y1="0" X2="1" Y2="0"></Line>
-
-            <Grid Grid.Row="1">
-                <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="*"></ColumnDefinition>
-                    <ColumnDefinition Width="*"></ColumnDefinition>
-                    <ColumnDefinition Width="*"></ColumnDefinition>
-                </Grid.ColumnDefinitions>
-
-                <Button Background="Green" Foreground="White" x:Name="btnPlay" Content="Play" Grid.Column="0" Click="btnPlay_Click" Visibility="Visible" ></Button>
-                <Button Background="Orange" Foreground="White" x:Name="btnPauze" Content="Pauze" Grid.Column="0" Click="btnPauze_Click" Visibility="Collapsed" ></Button>
-                <Button Background="Red" Foreground="White" x:Name="btnStop" Content="Stop" Grid.Column="2" Click="btnStop_Click" IsEnabled="False"></Button>
-            </Grid>
         </Grid>
-        
-
     </Grid>
 
 </phone:PhoneApplicationPage>
