--- a/PROJECT_ICT_APP/Dancing Buddy/MainPage.xaml
+++ b/PROJECT_ICT_APP/Dancing Buddy/MainPage.xaml
@@ -28,12 +28,17 @@
 
         <!--ContentPanel - place additional content here-->
         <Grid x:Name="ContentPanel" Grid.Row="1" Margin="12,0,12,0">
-            <StackPanel>
-                <TextBlock Text="bla bla bla" FontSize="30"/>
-                <Button x:Name="btnDancing" Content="Dancing Buddy" Background="Blue" Click="btnDancing_Click"/>
-                <Button x:Name="btnDBwarner" Content="dB Warner" Background="Magenta"/>
-            </StackPanel>
-
+            <Grid x:Name="buttons">
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="40"></RowDefinition>
+                    <RowDefinition Height="*"></RowDefinition>
+                    <RowDefinition Height="*"></RowDefinition>
+                </Grid.RowDefinitions>
+                
+                <TextBlock Grid.Row="0" Text="bla bla bla" FontSize="30"/>
+                <Button x:Name="btnDancing" Grid.Row="1" Content="Dancing Buddy" Background="Blue" Click="btnDancing_Click" Width="250" Height="150"/>
+                <Button x:Name="btnDBwarner" Grid.Row="2" Content="dB Warner" Background="Magenta" Width="250" Height="150"/>
+            </Grid>
         </Grid>
     </Grid>
 
