--- a/PROJECT_ICT_APP/Dancing Buddy/dBWarner.xaml
+++ b/PROJECT_ICT_APP/Dancing Buddy/dBWarner.xaml
@@ -1,5 +1,5 @@
 ﻿<phone:PhoneApplicationPage
-    x:Class="Dancing_Buddy.Page1"
+    x:Class="Dancing_Buddy.dBWarner"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:phone="clr-namespace:Microsoft.Phone.Controls;assembly=Microsoft.Phone"
@@ -21,25 +21,28 @@
         </Grid.RowDefinitions>
 
         <!--TitlePanel contains the name of the application and page title-->
-        <StackPanel Grid.Row="0" Margin="12,17,0,28">
-            <TextBlock Text="Made by Artesis" Style="{StaticResource PhoneTextNormalStyle}"/>
-            <TextBlock Text="Sound Wave" Margin="9,-7,0,0" Style="{StaticResource PhoneTextTitle1Style}"/>
+        <StackPanel x:Name="TitlePanel" Grid.Row="0" Margin="12,17,0,28">
+            <TextBlock x:Name="TitlePage" Text="dB Warner" Margin="9,-7,0,0" FontSize="50" FontFamily="Arial" Foreground="Red" HorizontalAlignment="Center"/>
         </StackPanel>
 
         <!--ContentPanel - place additional content here-->
-        <Grid x:Name="ContentPanel" Grid.Row="1" Margin="12,0,12,0">
-            <Grid x:Name="buttons">
-                <Grid.RowDefinitions>
-                    <RowDefinition Height="40"></RowDefinition>
-                    <RowDefinition Height="*"></RowDefinition>
-                    <RowDefinition Height="*"></RowDefinition>
-                </Grid.RowDefinitions>
-                
-                <TextBlock Grid.Row="0" Text="bla bla bla" FontSize="30"/>
-                <Button x:Name="btnDancing" Grid.Row="1" Content="Dancing Buddy" Background="Blue" Click="btnDancing_Click" Width="250" Height="150"/>
-                <Button x:Name="btnDBwarner" Grid.Row="2" Content="dB Warner" Background="Magenta" Width="250" Height="150" Click="btnDBwarner_Click"/>
+        <Grid x:Name="ContentPanel"  Grid.Row="1" Margin="5,0,5,0" RenderTransformOrigin="0.501,0.51">
+
+            <Grid.RowDefinitions>
+                <RowDefinition Height="5*"></RowDefinition>
+                <RowDefinition Height="*"></RowDefinition>
+            </Grid.RowDefinitions>
+
+            <Line Grid.Row="1" StrokeThickness="2" Stroke="Gray" HorizontalAlignment="Stretch" VerticalAlignment="Top" Stretch="Fill" X1="0" Y1="0" X2="1" Y2="0"></Line>
+
+            <Grid Grid.Row="1">
+
+                <Button Background="Green" Foreground="White" x:Name="btnPlay" Content="Play" Grid.Column="0" Click="btnPlay_Click" Visibility="Visible" ></Button>
+                <Button Background="Orange" Foreground="White" x:Name="btnPauze" Content="Pauze" Grid.Column="0" Click="btnPauze_Click" Visibility="Collapsed" ></Button>
             </Grid>
         </Grid>
+
+
     </Grid>
 
 </phone:PhoneApplicationPage>
